force-app/main/default/objects/Jira_Issue__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Label 1</fullName>
            </value>
            <value>
                <fullName>Label 2</fullName>
            </value>
            <value>
                <fullName>Label 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>