force-app/main/default/objects/Jira_Issue__c/fields/Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Story_Points__c</fullName>
    <formula>VALUE( TEXT ( Story_Point__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Story Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>